--- a/themes/Elegant_SeisMan/templates/base.html
+++ b/themes/Elegant_SeisMan/templates/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="zh-CN">
     <head>
         <link rel='shortcut icon' href='{{ SITEURL }}/favicon.ico' />
         <meta charset="utf-8"> 
