目录设置为浮动

--- a/themes/Elegant_SeisMan/static/css/custom.css
+++ b/themes/Elegant_SeisMan/static/css/custom.css
@@ -1,3 +1,9 @@
 div#contents p.topic-title.first {
     display: none;
 }
+
+.sidebar-nav-fixed {
+    position:fixed;
+    top:84px;
+    width:16.48%;
+}
