--- a/themes/Elegant_SeisMan/templates/article.html
+++ b/themes/Elegant_SeisMan/templates/article.html
@@ -31,7 +31,7 @@
 <div class="row-fluid">
     {% if article.toc %}
     <div class="span2 table-of-content">
-        <nav>
+        <nav id="TOC" class="sidebar-nav sidebar-nav-fixed">
         <h4>Contents</h4>
         {{ article.toc }}
         </nav>
