--- a/themes/Elegant_SeisMan/templates/article.html
+++ b/themes/Elegant_SeisMan/templates/article.html
@@ -81,8 +81,7 @@
         <div class="span2" style="float:right;font-size:0.9em;">
             {% if article.date %}
             <h4>Published</h4>
-            {% set day = article.date.strftime('%d')|int %}
-            <time pubdate="pubdate" datetime="{{ article.date.isoformat() }}">{{ article.date.strftime('%b') }} {{ day }} {{- article.date.strftime(', %Y') }}</time>
+            <time pubdate="pubdate" datetime="{{ article.date.isoformat() }}">{{article.date.strftime('%Y') }}-{{ article.date.strftime('%m') }}-{{ article.date.strftime('%d') }}</time>
             {% endif %}
             {% include '_includes/last_updated.html' %}
             {% include '_includes/multi_parts.html' %}
