--- a/themes/Elegant_SeisMan/templates/index.html
+++ b/themes/Elegant_SeisMan/templates/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block title %}
-{{ super() }}
+{{ super() }}{%if SITESUBTITLE %} · {{SITESUBTITLE|striptags}} {% endif%}
 {% endblock title %}
 
 {% block meta_tags_in_head %}
@@ -102,7 +102,7 @@
             <article>
                 <a href="{{ SITEURL }}/{{ article.url }}">{{ article.title }} {%if article.subtitle %} <small> {{ article.subtitle }} </small> {% endif %} </a>
                 <section>
-                    posted in
+                    Posted in
                 <a href="{{ SITEURL }}/categories.html#{{ article.category.slug }}-ref">{{ article.category }}</a>
                 <div class="recent-posts-time">
                 <time pubdate="pubdate" datetime="{{ article.date.isoformat() }}">{{ article.locale_date }}</time>
